--- a/.github/workflows/testing_full.yml
+++ b/.github/workflows/testing_full.yml
@@ -13,6 +13,11 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt-hotspot'
+          java-version: '16'
+          cache: 'gradle'      
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
