--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -30,7 +30,7 @@ jobs:
           conda run -n lotus_env bash environment_non_conda.sh
       - name: Run processing
         run: |
-          conda run -n lotus_env MODE=min make lotus-quick
+          conda run -n lotus_env MODE=test make lotus-quick
 #      - name: Run analyzing
 #        run: |
 #          conda run -n lotus_env MODE=min make analyzing
