[feature] Replace conda with mamba [feature] Allow us to test feature-ci-* branches
Mamba is so much faster, it adds a dependency in exchange for that, worth the cost.
Now any branch with a name starting with feature-ci- will get tested by the CI.

--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -2,9 +2,11 @@ on:
   push:
     branches:
       - main
+      - feature-ci-*
   pull_request:
     branches:
       - main
+      - feature-ci-*
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -22,9 +24,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install conda dependencies
+      - name: Install mamba
         run: |
-          $CONDA/bin/conda env create -q --file environment.yml
+          conda install mamba -n base -c conda-forge
+      - name: Install dependencies
+        run: |
+          $CONDA/bin/mamba env update -f environment.yml -n lotus_env
       - name: Install non-conda dependencies
         run: |
           conda run -n lotus_env bash environment_non_conda.sh
