--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -33,9 +33,12 @@ jobs:
       - name: Install non-conda dependencies
         run: |
           conda run -n lotus_env bash environment_non_conda.sh
-      - name: Run processing
+      - name: Run minimal example processing
         run: |
           conda run -n lotus_env MODE=test make lotus-quick
+      - name: Run manual entry mode
+        run: |
+          conda run -n lotus_env MODE=manual make manual-entry
 #      - name: Run analyzing
 #        run: |
 #          conda run -n lotus_env MODE=min make analyzing
