--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -38,6 +38,9 @@ jobs:
           conda run -n lotus_env MODE=test make lotus-quick
       - name: Run manual entry mode
         run: |
+          cd src
+          conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
+          cd ..
           conda run -n lotus_env MODE=manual make manual-entry
 #      - name: Run analyzing
 #        run: |
