--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -33,24 +33,24 @@ jobs:
       - name: Install non-conda dependencies
         run: |
           conda run -n lotus_env bash environment_non_conda.sh
-      - name: Run minimal example processing
-        run: |
-          conda run -n lotus_env MODE=test make lotus-quick
+      # - name: Run minimal example processing
+      #   run: |
+      #     conda run -n lotus_env MODE=test make lotus-quick
       - name: Run manual entry mode
         run: |
           cd src
           conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
           cd ..
           conda run -n lotus_env MODE=manual make manual-entry
-#      - name: Run analyzing
-#        run: |
-#          conda run -n lotus_env MODE=min make analyzing
-#      - name: Install visualizing conda dependencies
-#        run: |
-#         $CONDA/bin/conda env create -q --file environment_visualizing.yml
-#      - name: Install visualizing non-conda dependencies
-#        run: |
-#          conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
-#      - name: Run visualizing
-#        run: |
-#          conda run -n lotus_visualizing_env MODE=min make visualizing
+     # - name: Run analyzing
+     #   run: |
+     #     conda run -n lotus_env MODE=min make analyzing
+     # - name: Install visualizing conda dependencies
+     #   run: |
+     #    $CONDA/bin/conda env create -q --file environment_visualizing.yml
+     # - name: Install visualizing non-conda dependencies
+     #   run: |
+     #     conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
+     # - name: Run visualizing
+     #   run: |
+     #     conda run -n lotus_visualizing_env MODE=min make visualizing
