--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -31,8 +31,11 @@ jobs:
         run: |
           $CONDA/bin/mamba env update -f environment.yml -n lotus_env
       - name: Install non-conda dependencies
+        env:
+          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
         run: |
           conda run -n lotus_env bash environment_non_conda.sh
+          conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
       # - name: Run minimal example processing
       #   run: |
       #     conda run -n lotus_env MODE=test make lotus-quick
