--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Install non-conda dependencies
         env:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
           conda run -n lotus_env bash environment_non_conda.sh
           conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
