--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -135,6 +135,8 @@ jobs:
           cache: 'gradle'     
       - name: Setup WSL
         uses: Vampire/setup-wsl@v1.1.0
+      - name: setup-conda
+        uses: s-weigand/setup-conda@v1.0.7
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
