--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -145,20 +145,21 @@ jobs:
           python-version: 3.8
       - name: Install mamba
         run: |
-          $CONDA/bin/conda install mamba -n base -c conda-forge
+          <conda_base_env>\condabin\conda_hook.bat
+          conda install mamba -n base -c conda-forge
       - name: Install dependencies
         run: |
-          $CONDA/bin/conda env update -f environment.yml -n lotus_env
+          conda env update -f environment.yml -n lotus_env
       - name: Install non-conda dependencies
         env:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          $CONDA/bin/conda run -n lotus_env bash environment_non_conda.sh
-          $CONDA/bin/conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
+          conda run -n lotus_env bash environment_non_conda.sh
+          conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
       - name: Run minimal example processing
         run: |
-          $CONDA/bin/conda run -n lotus_env MODE=test make lotus-quick
+          conda run -n lotus_env MODE=test make lotus-quick
       - name: Create and populate .Renviron file
         env:
           CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
@@ -168,18 +169,18 @@ jobs:
       - name: Run manual entry mode
         run: |
           cd src
-          $CONDA/bin/conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
+          conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
           cd ..
-          $CONDA/bin/conda run -n lotus_env MODE=manual make manual-entry
+          conda run -n lotus_env MODE=manual make manual-entry
      # - name: Run analyzing
      #   run: |
-     #    $CONDA/bin/conda run -n lotus_env MODE=test make analyzing
+     #    conda run -n lotus_env MODE=test make analyzing
      # - name: Install visualizing conda dependencies
      #   run: |
-     #    $CONDA/bin/conda env create -q --file environment_visualizing.yml
+     #    conda env create -q --file environment_visualizing.yml
      # - name: Install visualizing non-conda dependencies
      #   run: |
-     #     $CONDA/bin/conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
+     #    conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
      # - name: Run visualizing
      #   run: |
-     #     $CONDA/bin/conda run -n lotus_visualizing_env MODE=min make visualizing
+     #    conda run -n lotus_visualizing_env MODE=min make visualizing
