--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -37,7 +37,6 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          conda run -n lotus_env bash environment_non_conda.sh
           conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
       - name: Run minimal example processing
         run: |
@@ -91,7 +90,6 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          sudo conda run -n lotus_env bash environment_non_conda.sh
           sudo conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
       - name: Run minimal example processing
         run: |
@@ -136,6 +134,7 @@ jobs:
         uses: s-weigand/setup-conda@v1.0.7
         with:
           update-conda: true
+          conda-channels: conda-forge, bioconda, defaults
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
@@ -151,7 +150,6 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          conda run -n lotus_env bash environment_non_conda.sh
           conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
       - name: Run minimal example processing
         run: |
