--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -31,6 +31,8 @@ jobs:
           conda install mamba -n base -c conda-forge
       - name: Install dependencies
         run: |
+          choco install wget
+          choco install unzip
           $CONDA/bin/mamba env update -f environment.yml -n lotus_env
       - name: Install non-conda dependencies
         env:
