--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -37,7 +37,7 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
+          conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
       - name: Run minimal example processing
         run: |
           conda run -n lotus_env MODE=test make lotus-quick
@@ -90,7 +90,7 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          sudo conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
+          sudo conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
       - name: Run minimal example processing
         run: |
           sudo conda run -n lotus_env MODE=test make lotus-quick
@@ -152,7 +152,7 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          conda run -n lotus_env Rscript -e 'remotes::install_github("ropensci/rcrossref")'
+          conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
       - name: Run minimal example processing
         run: |
           conda run -n lotus_env MODE=test make lotus-quick
