--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -9,175 +9,50 @@ on:
     branches:
       - main
       - feature-ci-*
-jobs:
-  lotus-linux:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '16'
-          cache: 'gradle'      
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install mamba
-        run: |
-          conda install mamba -n base -c conda-forge
-      - name: Install dependencies
-        run: |
-          $CONDA/bin/mamba env update -f environment.yml -n lotus_env
-      - name: Install non-conda dependencies
-        env:
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
-      - name: Run minimal example processing
-        run: |
-          conda run -n lotus_env MODE=test make lotus-quick
-      - name: Create and populate .Renviron file
-        env:
-          CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
-        run: |
-          touch .Renviron
-          echo crossref_email="$CROSSREF_EMAIL" >> .Renviron
-      - name: Run manual entry mode
-        run: |
-          cd src
-          conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
-          cd ..
-          conda run -n lotus_env MODE=manual make manual-entry
-     # - name: Run analyzing
-     #   run: |
-     #    conda run -n lotus_env MODE=test make analyzing
-     # - name: Install visualizing conda dependencies
-     #   run: |
-     #    conda env create -q --file environment_visualizing.yml
-     # - name: Install visualizing non-conda dependencies
-     #   run: |
-     #     conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
-     # - name: Run visualizing
-     #   run: |
-     #     conda run -n lotus_visualizing_env MODE=min make visualizing
-     
-  lotus-macOS:
-    runs-on: macos-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '16'
-          cache: 'gradle'      
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          sudo conda env update -f environment.yml -n lotus_env
-      - name: Install non-conda dependencies
-        env:
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          sudo conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
-      - name: Run minimal example processing
-        run: |
-          sudo conda run -n lotus_env MODE=test make lotus-quick
-      - name: Create and populate .Renviron file
-        env:
-          CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
-        run: |
-          touch .Renviron
-          echo crossref_email="$CROSSREF_EMAIL" >> .Renviron
-      - name: Run manual entry mode
-        run: |
-          cd src
-          sudo conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
-          cd ..
-          sudo conda run -n lotus_env MODE=manual make manual-entry
-     # - name: Run analyzing
-     #   run: |
-     #    conda run -n lotus_env MODE=test make analyzing
-     # - name: Install visualizing conda dependencies
-     #   run: |
-     #    conda env create -q --file environment_visualizing.yml
-     # - name: Install visualizing non-conda dependencies
-     #   run: |
-     #     conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
-     # - name: Run visualizing
-     #   run: |
-     #     conda run -n lotus_visualizing_env MODE=min make visualizing
 
-  lotus-windows:
-    runs-on: windows-latest
+jobs:
+  lotus-test:
+    name: tima-${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt-hotspot'
           java-version: '16'
-          cache: 'gradle'     
-      - name: Setup WSL
-        uses: Vampire/setup-wsl@v1.1.0
-      - name: setup-conda
-        uses: s-weigand/setup-conda@v1.0.7
-        with:
-          update-conda: true
-          conda-channels: conda-forge, bioconda, defaults
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+          cache: 'gradle'      
+      - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install mamba
-        run: |
-          conda install mamba -n base -c conda-forge
-      - name: Install dependencies
-        run: |
-          choco install make
-          choco install unzip
-          choco install wget
-          conda env update -f environment.yml -n lotus_env
-      - name: Install non-conda dependencies
-        env:
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          conda run -n lotus_env Rscript -e "remotes::install_github('ropensci/rcrossref')"
-      - name: Run minimal example processing
-        run: |
-          conda run -n lotus_env MODE=test make lotus-quick
+      - if: matrix.os == 'windows-latest'
+        uses: Vampire/setup-wsl@v1.1.0
+        with:
+          additional-packages:
+            curl
+            gzip
+            make
+            unzip
+            wget
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: 3.8
+          mamba-version: "*"
+          channels: conda-forge, bioconda, defaults
+          channel-priority: true
+          activate-environment: lotus_env
+          environment-file: environment.yml
+      - uses: s-weigand/setup-conda@v1
       - name: Create and populate .Renviron file
         env:
           CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
         run: |
           touch .Renviron
           echo crossref_email="$CROSSREF_EMAIL" >> .Renviron
-      - name: Run manual entry mode
+      - name: Run tests
         run: |
-          cd src
-          conda run -n lotus_env Rscript 1_gathering/db/manual/standardizing.R ../data/example/manual_example.tsv 
-          cd ..
-          conda run -n lotus_env MODE=manual make manual-entry
-     # - name: Run analyzing
-     #   run: |
-     #    conda run -n lotus_env MODE=test make analyzing
-     # - name: Install visualizing conda dependencies
-     #   run: |
-     #    conda env create -q --file environment_visualizing.yml
-     # - name: Install visualizing non-conda dependencies
-     #   run: |
-     #    conda run -n lotus_visualizing_env bash environment_visualizing_non_conda.sh
-     # - name: Run visualizing
-     #   run: |
-     #    conda run -n lotus_visualizing_env MODE=min make visualizing
+          bash tests/integration_test.sh
