--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   lotus-test:
-    name: tima-${{ matrix.os }}
+    name: lotus-${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -28,14 +28,15 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: r-lib/actions/setup-r@v1
       - if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
         with:
           additional-packages:
             curl
-            dos2unix
             gzip
             make
+            r-base
             unzip
             wget
       - uses: conda-incubator/setup-miniconda@v2
@@ -67,5 +68,4 @@ jobs:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          dos2unix tests/integration_test.sh
           wsl bash tests/integration_test.sh
