--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -29,6 +29,45 @@ jobs:
         with:
           python-version: 3.8
       - uses: r-lib/actions/setup-r@v1
+        with:
+          extra-repositories:
+            bioconductor
+            git
+      - uses: r-lib/actions/setup-r-dependencies@v1
+        with:
+          needs: |
+            codetools 
+            data.table
+            dplyr
+            DBI
+            forcats
+            gdata
+            jsonlite
+            pbmcapply
+            philentropy
+            plotly
+            purrr
+            rcrossref
+            readr
+            readxl
+            remotes
+            rentrez
+            rotl
+            RPostgreSQL
+            RSQLite
+            R.utils
+            rvest
+            splitstackshape
+            stringdist
+            stringi
+            stringr
+            testthat
+            tibble
+            tidyjson
+            tidyr
+            webchem
+            XML
+            xml2
       - if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
         with:
