--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -18,6 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -28,16 +31,14 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: r-lib/actions/setup-r@v1
       - if: matrix.os == 'windows-latest'
-        uses: Vampire/setup-wsl@v1.1.0
-        with:
-          additional-packages:
-            curl
-            gzip
-            make
-            r-base
-            unzip
-            wget
+        run: |
+          choco install curl
+          choco install gzip
+          choco install make
+          choco install unzip
+          choco install wget
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
@@ -54,18 +55,9 @@ jobs:
         run: |
           touch .Renviron
           echo crossref_email="$CROSSREF_EMAIL" >> .Renviron
-      - name: Run tests (unix)
-        if: matrix.os != 'windows-latest'
+      - name: Run tests
         env:
           R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
            bash tests/integration_test.sh
-      - name: Run tests (windows)
-        if: matrix.os == 'windows-latest'
-        env:
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          wsl conda env update -f environment.yml base
-          wsl bash tests/integration_test.sh
