[fix] adding -o to unzip in case files were already present

--- a/src/1_gathering/validation/Makefile
+++ b/src/1_gathering/validation/Makefile
@@ -3,4 +3,4 @@
 
 gathering-validation: ${VALIDATION_PATH}/manuallyValidated.tsv.gz
 ${VALIDATION_PATH}/manuallyValidated.tsv.gz:
-	@[ ! -f ${VALIDATION_PATH} ] && mkdir -p ${VALIDATION_PATH} && echo "Downloading" && wget -nv "https://osf.io/${OSF_VALIDATION}/download" -O ${PWD}/data/validation.zip && unzip ${PWD}/data/validation.zip -d ${PWD}/data/ && rm ${PWD}/data/validation.zip && echo "Done" || true
+	@[ ! -f ${VALIDATION_PATH} ] && mkdir -p ${VALIDATION_PATH} && echo "Downloading" && wget -nv "https://osf.io/${OSF_VALIDATION}/download" -O ${PWD}/data/validation.zip && unzip -o ${PWD}/data/validation.zip -d ${PWD}/data/ && rm ${PWD}/data/validation.zip && echo "Done" || true
